feat: adds cel payload env for converting payloads to json

--- a/crates/ponix-payload/Cargo.toml
+++ b/crates/ponix-payload/Cargo.toml
@@ -8,3 +8,4 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
 chrono = { workspace = true }
+cel-interpreter = { workspace = true }
